<resources>
    <string name="app_name">Internship2025</string>
    <string name="title_home">Главная</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_account">Аккаунт</string>
    <string name="continue_button">Продолжить</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="auth_email_edit_text">example@gmail.com</string>
    <string name="auth_password_edit_text">Введите пароль</string>
    <string name="auth_enter_button">Вход</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth_enter_text_view">Вход</string>
    <string name="auth_email_text_view">Email</string>
    <string name="auth_password_text_view">Пароль</string>
    <string name="auth_not_account_text_view">Нету аккаунта?</string>
    <string name="auth_registration_text_view">Регистрация</string>
    <string name="auth_forgot_password_text_view">Забыл пароль</string>
    <string name="onbording">Тысячи курсов одном месте</string>
    <string name="auth_registration_error_email">Некорректный email</string>
    <string name="search_courses">Search courses...</string>
    <string name="date_sorting">По дате добавления</string>

</resources>