<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth.AuthActivity">


    <TextView
        android:id="@+id/enter_text_view"
        style="@style/Internship2025.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/auth_enter_text_view"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="204dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/email_text_view"

                style="@style/Internship2025.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_email_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_edit_text"
                style="@style/Internship2025.EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/auth_email_edit_text"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/password_text_view"
                style="@style/Internship2025.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_password_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password_edit_text"

                style="@style/Internship2025.EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/auth_password_edit_text"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/enter_button"
        style="@style/Internship2025.Button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="376dp"
        android:text="@string/auth_enter_button"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        style="@style/Internship2025.ProgressBar"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@id/enter_button"
        app:layout_constraintTop_toTopOf="@id/enter_button"
        app:layout_constraintRight_toRightOf="@id/enter_button"
        app:layout_constraintBottom_toBottomOf="@id/enter_button"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginTop="432dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/not_account_text_view"
            style="@style/Internship2025.TextView.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_not_account_text_view"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registration_text_view"
            style="@style/Internship2025.TextView.Small.Click"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/auth_registration_text_view"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/not_account_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgot_password_text_view"
            style="@style/Internship2025.TextView.Small.Click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/auth_forgot_password_text_view"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="502dp"
        app:dividerColor="#4D555E"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="534dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            style="@style/Internship2025.Button.VK"
            android:id="@+id/vk_button"
            android:layout_width="156dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            style="@style/Internship2025.Button.OK"

            android:id="@+id/ok_button"
            android:layout_width="156dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>